--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     initPayload: "Hi Welcome",
 	interval: 1000,
     customData: {"language": "en"}, // arbitrary custom data. Stay minimal as this will be added to the socket
-    socketUrl: "http://localhost:5005",
+    socketUrl: "http://192.168.37.135:5005",
     socketPath: "/socket.io/",
     title: "AscentBot",
     subtitle: "Bot for Military",
